--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = NQPV
-version = 0.1
+version = 0.1b2
 author = Yingte Xu
 author_email = lucianoxu@foxmail.com
 description = An assistant tool for the formal verification of nondeterministic quantum programs.
@@ -20,13 +20,8 @@ classifiers =
     Topic :: Scientific/Engineering
 
 [options]
-package_dir = 
-    = nqpv
 packages = find:
 install_requires =
     numpy
     cvxpy
     ply
-
-[options.packages.find]
-where = nqpv
